--- a/code/API_definitions/check-device-connectivity.yaml
+++ b/code/API_definitions/check-device-connectivity.yaml
@@ -15,8 +15,8 @@ externalDocs:
 security:
   - {}
   - oAuth2ClientCredentials: []
-  - BasicAuth: []
-  - apiKey: []
+#  - BasicAuth: []
+#  - apiKey: []
   - three_legged:
     - device-connectivity-read
 servers:
@@ -71,14 +71,14 @@ components:
         clientCredentials:
           tokenUrl: '{tokenUrl}'
           scopes: {}
-    BasicAuth:
-      type: http
-      scheme: basic
-    apiKey:
-      type: apiKey
-      description: API key to authorize requests
-      name: apikey
-      in: query
+#    BasicAuth:
+#      type: http
+#      scheme: basic
+#    apiKey:
+#      type: apiKey
+#      description: API key to authorize requests
+#      name: apikey
+#      in: query
     three_legged:
       type: oauth2
       flows:
