--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -6,4 +6,4 @@
 
 # These are the default owners for the whole content of this repository. The default owners are automatically added as reviewers when you open a pull request, unless different owners are specified in the file.
 
-* @shilpa-padgaonkar @eric-murray
+* @shilpa-padgaonkar @eric-murray @bigludo7
