Add new return parameters Country Code and Name (#1)
* Add new return parameters Country Code and Name 

More Details for Roaming Status #18 :- With reference to this issue on CAMARA we  added new return parameter 
1. Country Code
2. Country Name

* Added description and e.g. for Country Code & Name

* YAML Update version number

--- a/code/API_definitions/check-device-connectivity.yaml
+++ b/code/API_definitions/check-device-connectivity.yaml
@@ -8,7 +8,7 @@ info:
   license:
     name: Apache 2.0
     url: https://www.apache.org/licenses/LICENSE-2.0.html
-  version: 0.2.0
+  version: 0.2.1
 externalDocs:
   description: Product documentation at CAMARA
   url: https://github.com/camaraproject/
@@ -30,7 +30,7 @@ servers:
         description: Base path for Device Connectivity API
 tags:
   - name: Device Connectivity Status
-    description: Operations to validate device connectivity status
+    description: Operations to validate device connectivity status and Country information.
 paths:
    /status:
     post:
@@ -99,10 +99,16 @@ components:
           $ref: "#/components/schemas/ConnectivityEventType"
         eventStatus:
           $ref: "#/components/schemas/EventStatusType"
+        countryCode:
+          $ref: "#/components/schemas/CountryCode"
+        countryName:
+          $ref: "#/components/schemas/CountryName"  
       required:
         - ueId
         - eventType
         - eventStatus
+        - countryCode
+        - countryName
     UeId:
       description: User equipment identifier
       type: object
@@ -158,6 +164,14 @@ components:
       enum:
         - ROAMING_ON
         - ROAMING_OFF
+    CountryCode:
+      description: The country calling code as an identifier for the country and the dependent areas.
+      type: string
+      example: "49"
+    CountryName:
+      description: The ISO Code of the country.
+      type: string
+      example: "DE"
     RequestStatus:
       type: object
       properties:
