YAML: Update review comment for MCC
YAML: We updated YAML to change the country calling code to Mobile country code and data type from string to integer

--- a/code/API_definitions/check-device-connectivity.yaml
+++ b/code/API_definitions/check-device-connectivity.yaml
@@ -165,9 +165,9 @@ components:
         - ROAMING_ON
         - ROAMING_OFF
     CountryCode:
-      description: The country calling code as an identifier for the country and the dependent areas.
-      type: string
-      example: "49"
+      description: The Mobile country code (MCC) as an geographic region identifier for the country and the dependent areas.
+      type: integer
+      example: 262
     CountryName:
       description: The ISO Code of the country.
       type: string
