Update review comments (Version & Description)
YAML Update:- With reference to review comments we  updated the API version and description of Country Name and removed countryName and countryCode from required

--- a/code/API_definitions/check-device-connectivity.yaml
+++ b/code/API_definitions/check-device-connectivity.yaml
@@ -8,7 +8,7 @@ info:
   license:
     name: Apache 2.0
     url: https://www.apache.org/licenses/LICENSE-2.0.html
-  version: 0.2.1
+  version: 0.3.0
 externalDocs:
   description: Product documentation at CAMARA
   url: https://github.com/camaraproject/
@@ -107,8 +107,6 @@ components:
         - ueId
         - eventType
         - eventStatus
-        - countryCode
-        - countryName
     UeId:
       description: User equipment identifier
       type: object
@@ -169,7 +167,7 @@ components:
       type: integer
       example: 262
     CountryName:
-      description: The ISO Code of the country.
+      description: The ISO 3166 ALPHA-2 code of the country.
       type: string
       example: "DE"
     RequestStatus:
