Update Multiple examples for Country name
We added  three examples of (no-countrycode,   single-countrycode --multiple-cc) with some extended description.

--- a/code/API_definitions/check-device-connectivity.yaml
+++ b/code/API_definitions/check-device-connectivity.yaml
@@ -51,6 +51,34 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/ConnectivityEventReport'
+              examples:
+                No-Country-Code:
+                  value:
+                    ueId:
+                      msisdn: 123456789
+                    uePort: 5090
+                    eventType: UE_ROAMING_STATUS
+                    eventStatus: ROAMING_ON
+                    countryCode: 901
+                    countryName: ["xx"]
+                Single-Country-Code:
+                  value:
+                    ueId:
+                      msisdn: 123456789
+                    uePort: 5090
+                    eventType: UE_ROAMING_STATUS
+                    eventStatus: ROAMING_ON
+                    countryCode: 262
+                    countryName: ["DE"]
+                Multiple-Country-Codes:
+                  value:
+                    ueId:
+                      msisdn: 123456789
+                    uePort: 5090
+                    eventType: UE_ROAMING_STATUS
+                    eventStatus: ROAMING_ON
+                    countryCode: 340
+                    countryName: [ "BL","GF","GP","MF","MQ" ]    
         '400':
           $ref: "#/components/responses/Generic400"
         '401':
@@ -165,13 +193,11 @@ components:
     CountryCode:
       description: The Mobile country code (MCC) as an geographic region identifier for the country and the dependent areas.
       type: integer
-      example: 340
     CountryName:
-      description: A list of ISO 3166 ALPHA-2 country-codes of mapped to the mobile country code (MCC).
+      description: The ISO 3166 ALPHA-2 country-codes of mapped to mobile country code(MCC). If there is mapping of one MCC to multiple countries, then we have list of countries. If there is no mapping of MCC to any country, then ["xx"] will be used.
       type: array
       items:
         type: string
-      example: [BL,GF,GP,MF,MQ]
     RequestStatus:
       type: object
       properties:
