Update YAML with empty array for no country code

--- a/code/API_definitions/check-device-connectivity.yaml
+++ b/code/API_definitions/check-device-connectivity.yaml
@@ -60,7 +60,7 @@ paths:
                     eventType: UE_ROAMING_STATUS
                     eventStatus: ROAMING_ON
                     countryCode: 901
-                    countryName: ["xx"]
+                    countryName: []
                 Single-Country-Code:
                   value:
                     ueId:
