initial_simplified_version

--- a/code/API_definitions/check-device-connectivity.yaml
+++ b/code/API_definitions/check-device-connectivity.yaml
@@ -1,14 +1,14 @@
 openapi: 3.0.3
 info:
-  title: Check device connectivity API
-  description: Service Enabling Network Function API for monitoring device connectivity
+  title: Device Roaming Status
+  description: Service Enabling Network Function API for monitoring device roaming status
   termsOfService: http://swagger.io/terms/
   contact:
     email: project-email@sample.com
   license:
     name: Apache 2.0
     url: https://www.apache.org/licenses/LICENSE-2.0.html
-  version: 0.2.0
+  version: 0.3.0
 externalDocs:
   description: Product documentation at CAMARA
   url: https://github.com/camaraproject/
@@ -18,7 +18,7 @@ security:
 #  - BasicAuth: []
 #  - apiKey: []
   - three_legged:
-    - device-connectivity-read
+    - device-roaming-status-roaming-read
 servers:
   - url: '{apiRoot}/{basePath}'
     variables:
@@ -26,18 +26,18 @@ servers:
         default: http://localhost:9091
         description: API root
       basePath:
-        default: connectivity/v0
-        description: Base path for Device Connectivity API
+        default: /device-roaming-status/v0
+        description: Base path for the device roaming status API
 tags:
-  - name: Device Connectivity Status
-    description: Operations to validate device connectivity status
+  - name: Device roaming status
+    description: Operations to validate device roaming status
 paths:
-   /status:
+   /roaming:
     post:
       tags:
-        - Device Connectivity Status
-      summary: 'Get the current connectivity status'
-      operationId: getStatus
+        - Device roaming status
+      summary: 'Get the current roaming status'
+      operationId: verifyRoamingStatus
       requestBody:
         content:
           application/json:
@@ -46,11 +46,11 @@ paths:
         required: true
       responses:
         '200':
-          description: Contains information about current connectivity status
+          description: Contains information about current roaming status
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/ConnectivityEventReport'
+                $ref: '#/components/schemas/RoamingStatusResponse'
         '400':
           $ref: "#/components/responses/Generic400"
         '401':
@@ -86,23 +86,18 @@ components:
           authorizationUrl: https://auth.example.com/authorize
           tokenUrl: https://auth.example.com/token
           scopes:
-            device-connectivity-read: Read device roaming status
+            device-roaming-status-roaming-read: Read device roaming status
   schemas:
-    ConnectivityEventReport:
-      type: "object"
-      properties:
-        ueId:
-          $ref: "#/components/schemas/UeId"
-        uePort:
-          $ref: '#/components/schemas/Port'
-        eventType:
-          $ref: "#/components/schemas/ConnectivityEventType"
-        eventStatus:
-          $ref: "#/components/schemas/EventStatusType"
+    RoamingStatusResponse:
+      type: object
       required:
-        - ueId
-        - eventType
-        - eventStatus
+        - roaming
+      properties:
+        roaming:
+          $ref: '#/components/schemas/ActiveRoaming'
+    ActiveRoaming:
+      description: Roaming status. True, if it is roaming
+      type: boolean
     UeId:
       description: User equipment identifier
       type: object
@@ -149,15 +144,6 @@ components:
           - address/mask - an IP v6 number with a mask:
             - 2001:db8:85a3:8d3::0/64
             - 2001:db8:85a3:8d3::/64
-    ConnectivityEventType:
-      type: string
-      enum:
-        - UE_ROAMING_STATUS
-    EventStatusType:
-      type: string
-      enum:
-        - ROAMING_ON
-        - ROAMING_OFF
     RequestStatus:
       type: object
       properties:
@@ -165,11 +151,8 @@ components:
           $ref: '#/components/schemas/UeId'
         uePort:
           $ref: '#/components/schemas/Port'
-        eventType:
-          $ref: '#/components/schemas/ConnectivityEventType'
       required:
         - ueId
-        - eventType
     Port:
       description: User equipment port. Device port may be required along with IP address to identify the target device
       type: integer
